--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="about__content">
         <div class="content__title wow animate__bounceIn text-align-center" style="color:#F92801">About $NARUPE</div>
         <div class="content__text wow animate__bounceIn">
-          I'm the lit token that's about to disrupt the finance game, straight outta the genius minds of the SEI
+          I'm the lit token that's about to disrupt the finance game, straight outta the genius minds of the Solana
           ecosystem. They
           saw the future and decided to create this fire token. I'm the real deal, combining
           lightning-fast speeds, low fees that won't break the bank, determined to put
@@ -139,10 +139,10 @@
           </p>
           <p>
             Step 3:
-            Go to raydium and change $sol to $NARUPE by pasting the $NARUPE token address and approving the transaction
+            Go to pumpfun and buy $NARUPE
           <p>
             Step 4:
-            You're now a $NARUPE holder. you've achieved financial freedom
+            You're now a $NARUPE holder.
             <br>
           </p>
         </div>
