--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         $NARUPE
       </h2>
       <h3 class="wow animate__bounceIn">
-        I'm NaruPe, the first token to hit the Solana scene. <br>
+        I'm NaruPe, the first ninja to hit the Solana scene. <br>
         Straight outta the minds of some real ones, I'm leading<br> this
         new
         wave - no cap.
@@ -100,7 +100,7 @@
           We're not just investing anymore, we're flipping the entire industry on its head. Get ready to be part of
           something truly innovative, 'cause I'm
           here to shake
-          things up and leave the old-school finance world in the dust. Let's get this bread, fam!
+          things up and leave the old-school finance world in the dust.
         </div>
       </div>
     </div>
