--- a/index.html
+++ b/index.html
@@ -64,11 +64,8 @@
         wave - no cap.
       </h3>
       <h3 class="wow animate__bounceIn">
-        Don't sleep on this, join the revolution! <br>Hop into Solana, stake your bread, and watch your net worth<br> blow
-        up
-
-        to levels you
-        can't even fathom.
+        Don't sleep on this, join the revolution! <br>Hop into Solana, join ninja gang and watch your networth <br> 
+        become bigger than you can imagine 
       </h3>
 
       <div class="intro__links wow animate__bounceIn">
@@ -100,7 +97,7 @@
           We're not just investing anymore, we're flipping the entire industry on its head. Get ready to be part of
           something truly innovative, 'cause I'm
           here to shake
-          things up and leave the old-school finance world in the dust.
+          things up and leave the old-school finance world in the dust. 
         </div>
       </div>
     </div>
@@ -117,7 +114,7 @@
           time to
           secure the biggest bag of our lives! Who's trying to get this crypto cheese with me? The game's never going to
           be the
-          same after this - we're making history, let's get it!
+          same after this - we're making history, let's get it! 
         </div>
         <img src="images/6.png" alt="" class="picture wow animate__bounceIn rotate">
       </div>
@@ -193,8 +190,8 @@
 
   <section class="nft" id="nft">
     <div class="container">
-      <div class="content__title wow animate__bounceIn text-align-center" style="color:#F92801"><img src="images/img-1.png" alt="" width="60" class="spin"> NFT <img src="images/img-1.png" alt="" width="60" class="spin"> <br>
-        Showcase
+      <div class="content__title wow animate__bounceIn text-align-center" style="color:#F92801"><img src="images/img-1.png" alt="" width="60" class="spin"> JOIN OUR <img src="images/img-1.png" alt="" width="60" class="spin"> <br>
+        GANG
       </div>
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
