--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         wave - no cap.
       </h3>
       <h3 class="wow animate__bounceIn">
-        Don't sleep on this, join the revolution! <br>Hop into Solana, join ninja gang and watch your networth <br> 
+        Don't sleep on this, join the revolution! <br>Hop into Solana, join our ninja gang and watch your networth <br> 
         become bigger than you can imagine 
       </h3>
 
