--- a/index.html
+++ b/index.html
@@ -86,18 +86,11 @@
       <div class="about__content">
         <div class="content__title wow animate__bounceIn text-align-center" style="color:#F92801">About $NARUPE</div>
         <div class="content__text wow animate__bounceIn">
-          I'm the lit token that's about to disrupt the finance game, straight outta the genius minds of the Solana
-          ecosystem. They
-          saw the future and decided to create this fire token. I'm the real deal, combining
-          lightning-fast speeds, low fees that won't break the bank, determined to put
-          power
-          back in the hands of the people.
-          <br>
-          <br>
-          We're not just investing anymore, we're flipping the entire industry on its head. Get ready to be part of
-          something truly innovative, 'cause I'm
-          here to shake
-          things up and leave the old-school finance world in the dust. 
+        NARUPE: The ninja-themed memecoin you didn’t know you needed. 🚀 Straight outta the dojo, $NARUPE is slicing through the Solana blockchain like a katana at full tilt. This ain't no samurai tea ceremony—it's high-energy ninja chaos with a touch of crypto finesse.
+
+Forget HODL, we’re all about “Nin-HODL” here. Make the wrong move, and your portfolio might just commit harakiri... but play it right, and you’ll be flipping like a shuriken straight to the moon. 🌕
+
+Join the ninja gang, sharpen your trading skills, and witness your wallet do a backflip. This revolution isn't for the faint-hearted—it’s for the real crypto warriors.
         </div>
       </div>
     </div>
